--- a/VAERS.IPYNB
+++ b/VAERS.IPYNB
@@ -32,7 +32,14 @@
     "download the data from VAERS website  \r\n",
     "[link to VAERS website](https://vaers.hhs.gov/data/datasets.html?)\r\n",
     "\r\n",
-    "this will give you AllVAERSDataCSVS.zip  \r\n",
+    "make sure to download the 2020-2021 data\r\n",
+    "2021VAERSVAX.csv  \r\n",
+    "2021VAERSSYMPTOMS.csv  \r\n",
+    "2021VAERSDATA.csv  \r\n",
+    "2020VAERSVAX.csv  \r\n",
+    "2020VAERSSYMPTOMS.csv  \r\n",
+    "2020VAERSDATA.csv \r\n",
+    "\r\n",
     "\r\n",
     "## 2. move and unzip\r\n",
     "move the AllVAERSDataCSVS.zip to VAERS folder and unzip it  \r\n",
